# zowe-client-python-sdk

./: .codecov.yml  .coveragerc  .env-local  .env.example  .gitignore  .pydocstyle  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  auto-comment.yml  changelog.yml  dev-release.yaml  dev-release.yaml.old  (+7 more)
core/: setup.py
docs/: README.md  conf.py  index.rst  modules.rst  requirements.txt  zowe_sdk.console.rst  zowe_sdk.files.rst  zowe_sdk.jobs.rst  zowe_sdk.rst  zowe_sdk.tso.rst  zowe_sdk.utilities.rst  zowe_sdk.zosmf.rst
samples/: SampleConsole.py  SampleFiles.py  SampleJobs.py
scripts/: license_header.py  tasks.py
src/: README.md  _version.py  setup.py  test2.py
src/secrets/: Cargo.toml  README.md  pyproject.toml
src/secrets/scripts/: configure-cross.sh
src/secrets/src/: lib.rs
src/secrets/src/keyring/: Cargo.toml  pyproject.toml
src/secrets/src/keyring-test/: Cargo.toml  pyproject.toml
src/secrets/src/keyring-test/src/: lib.rs
src/secrets/src/keyring/src/: lib.rs
src/secrets/zowe/secrets_for_zowe_sdk/: __init__.py  pyproject.toml
src/secrets/zowe/secrets_for_zowe_sdk/src/: lib.rs
testcodes/: profile2_test.py
tests/: __init__.py  conftest.py
zeepy/: __init__.py  zeepy.py
zos_console/: setup.py
zos_tso/: setup.py
zosmf/: setup.py
zowe_sdk/: __init__.py  zowe_sdk.py
(+200 files in other folders)
