[package]
name = "keyring"
readme = "README.md"
repository = "https://github.com/zowe/zowe-client-python-sdk"
version = "1.0.0-dev13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "keyring"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py37"] }
secrets_core = { git = "https://github.com/zowe/zowe-cli.git", branch = "master" }
